# openfi-proto

./: .gitignore  Cargo.toml
.cargo/: config.toml
entity/src/: admin_mac.rs  client.rs  data_plan.rs  lib.rs  mod.rs  plan.rs  prelude.rs  redeemable_code.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230803_063215_create_table_plans.rs  m20230803_063339_create_table_data_plans.rs  m20230803_070833_plan_seed_data.rs  m20230804_042725_create_table_admin_macs.rs  m20230804_080439_create_table_plan_codes.rs
openfi-frontend/: .env.production  package.json  vite.config.ts
openfi-frontend/adapters/static/: vite.config.ts
openfi-frontend/src/: entry.ssr.tsx  global.css  root.tsx
openfi-frontend/src/components/: Plans.tsx  Status.tsx
openfi-frontend/src/routes/: index.tsx  layout.tsx
openfi-frontend/src/routes/admin/: index.tsx
openfi-frontend/src/util/: time.ts  types.d.ts
src/: extensions.rs  lib.rs  main.rs  params.rs  responders.rs
src/handlers/: admin.rs  code.rs  credits.rs  data.rs  index.rs  mod.rs  pause.rs  plans.rs  request_access.rs  status.rs
src/test/: client_timer_tests.rs  mod.rs  parser_tests.rs
