[package]
name = "openfi-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = { version = "0.6.19", features = ["tokio"] }
axum-client-ip = "0.4.1"
axum-sessions = "0.5.0"
chrono = "0.4.26"
dotenv = "0.15.0"
futures-util = "0.3.28"
mime_guess = "2.0.4"
sea-orm = { version = "0.12.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.3", features = ["fs"] }
openssl = { version = "0.10.55", features = ["vendored"] }
